Add validate endpoint
