# docs/web_deploy/openapi.json
@@ -444,6 +444,35 @@
           }
         }
       }
+    },
+    "/integrations/nonce-auth-svc/validate": {
+      "get": {
+        "tags": [
+          "User Authentication"
+        ],
+        "summary": "Validation",
+        "operationId": "validate",
+        "description": "Check if token is valid",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "schema": {
+              "type": "string",
+              "format": "Bearer {token}",
+              "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
     }
   },
   "components": {
